<resources>
    <string name="app_name">3HAM</string>
    <string name="question_counter_format">%1$d/%2$d</string>
    <string name="welcome_title">Знам ли?</string>
    <string name="welcome_subtitle">Провери знанията си</string>
    <string name="start_button">Започни</string>
    <string name="stats_title">Статистика</string>
    <string name="language_toggle_to_en">EN</string>
    <string name="language_toggle_to_bg">BG</string>
    <string name="app_logo_description">Лого на приложението</string>
    <string name="hint_icon_description">Подсказка</string>
    <string name="language_toggle_content_description">Смени езика</string>

    <string name="select_quiz_title">Избери тест</string>
    <string name="category_class8">8. клас</string>
    <string name="category_class9">9. клас</string>
    <string name="category_class10">10. клас</string>
    <string name="category_entrance_exam">Кандидатстудентски изпит</string>
    <string name="category_class8_short">8. клас</string>
    <string name="category_class9_short">9. клас</string>
    <string name="category_class10_short">10. клас</string>
    <string name="category_entrance_exam_short">КСК</string>

    <string name="loading">Зареждане…</string>
    <string name="back_content_description">Назад</string>
    <string name="hint_label">Подсказка</string>
    <string name="hint_content_description">Подсказка</string>
    <string name="question_placeholder">Текст на въпроса</string>
    <string name="question_counter_placeholder">Въпрос 1 от 15</string>
    <string name="option_1_placeholder">Опция 1</string>
    <string name="option_2_placeholder">Опция 2</string>
    <string name="option_3_placeholder">Опция 3</string>
    <string name="option_4_placeholder">Опция 4</string>
    <string name="select_answer_prompt">*Моля, избери отговор.</string>
    <string name="next_button">Напред</string>
    <string name="score_label">Точки</string>
    <string name="time_label">Време</string>
    <string name="no_questions_available">Няма налични въпроси.</string>
    <string name="error_starting_quiz">Грешка при стартиране на теста: %1$s</string>
    <string name="error_loading_questions">Грешка при зареждане на въпросите: %1$s</string>

    <string name="empty_stats_title">Все още нямаш завършени тестове</string>
    <string name="empty_stats_subtitle">Завърши поне един тест, за да видиш статистиката си.</string>
    <string name="tests_label">Тестове</string>
    <string name="total_time_label">Общо време</string>
    <string name="best_score_label">Рекорд</string>
    <string name="overall_accuracy_label">Обща точност</string>
    <string name="this_week_label">Тази седмица</string>
    <string name="week_sessions_one">%1$d тест</string>
    <string name="week_sessions_many">%1$d теста</string>
    <string name="by_category_label">По категории</string>
    <string name="no_data">Няма данни</string>
    <string name="recent_tests_label">Последни тестове</string>
    <string name="time_just_now">Току-що</string>
    <string name="time_minutes_ago">Преди %1$d мин</string>
    <string name="time_hours_ago">Преди %1$d ч</string>
    <string name="time_days_ago">Преди %1$d дни</string>
    <string name="duration_hours_minutes">%1$d ч %2$d мин</string>
    <string name="duration_minutes">%1$d мин</string>
    <string name="duration_seconds">%1$d сек</string>

    <string name="result_format">Резултат: %1$d/%2$d</string>
    <string name="result_placeholder">Резултат: 0/15</string>
    <string name="time_format">Време: %1$s</string>
    <string name="time_placeholder">Време: 00:00</string>
    <string name="correct_answer_format">Правилен отговор: %1$s</string>
    <string name="skipped_answer">Въпросът е пропуснат.</string>
    <string name="your_answer_format">Твоят отговор: %1$s</string>
    <string name="new_quiz_button">Нов тест</string>

    <string name="level_format">Ниво %1$d</string>
    <string name="xp_progress_format">%1$d / %2$d XP</string>
    <string name="xp_total_format">%1$d XP</string>
    <string name="xp_earned_format">+%1$d XP</string>
    <string name="xp_to_next_level_format">%1$d XP  •  остават %2$d до следващото ниво</string>
    <string name="streak_days_format">%1$d дни</string>
    <string name="streak_label">поредица</string>
    <string name="day_streak_format">Поредица: %1$d дни</string>
    <string name="level_up_format">⭐ Ново ниво! Ниво %1$d</string>
    <string name="new_achievements_title">Нови постижения!</string>
    <string name="daily_challenge_default">Дневно предизвикателство</string>
    <string name="daily_challenge_class9">Предизвикателство за 9. клас</string>
    <string name="daily_challenge_class10">Предизвикателство за 10. клас</string>
    <string name="daily_challenge_entrance_exam">Кандидатстудентско предизвикателство</string>
    <string name="daily_challenge_format">⚡ %1$s</string>
    <string name="daily_challenge_done_format">✅ %1$s (Готово)</string>
    <string name="gamification_quizzes_label">Тестове</string>
    <string name="gamification_best_streak_label">Най-добра серия</string>
    <string name="gamification_perfects_label">Без грешка</string>
    <string name="gamification_badges_label">Значки</string>
    <string name="recent_achievements_label">Последни постижения:</string>

    <string name="achievement_first_quiz_name">Първи стъпки</string>
    <string name="achievement_ten_quizzes_name">Добро начало</string>
    <string name="achievement_fifty_quizzes_name">Отдаден ученик</string>
    <string name="achievement_hundred_quizzes_name">Майстор на тестовете</string>
    <string name="achievement_streak_3_name">В серия</string>
    <string name="achievement_streak_7_name">Седмичен воин</string>
    <string name="achievement_streak_14_name">Двуседмична сила</string>
    <string name="achievement_streak_30_name">Месечна легенда</string>
    <string name="achievement_first_perfect_name">Перфекционист</string>
    <string name="achievement_five_perfects_name">Безгрешна петица</string>
    <string name="achievement_speed_demon_name">Скоростен демон</string>
    <string name="achievement_no_hints_name">Самостоятелен гений</string>
    <string name="achievement_level_5_name">Изгряваща звезда</string>
    <string name="achievement_level_10_name">Търсач на знание</string>
    <string name="achievement_level_25_name">Експерт по биология</string>
    <string name="achievement_xp_1000_name">Колекционер на XP</string>
    <string name="achievement_xp_5000_name">Трупач на XP</string>
    <string name="achievement_first_quiz_description">Завърши първия си тест</string>
    <string name="achievement_ten_quizzes_description">Завърши 10 теста</string>
    <string name="achievement_fifty_quizzes_description">Завърши 50 теста</string>
    <string name="achievement_hundred_quizzes_description">Завърши 100 теста</string>
    <string name="achievement_streak_3_description">Поддържай 3-дневна поредица</string>
    <string name="achievement_streak_7_description">Поддържай 7-дневна поредица</string>
    <string name="achievement_streak_14_description">Поддържай 14-дневна поредица</string>
    <string name="achievement_streak_30_description">Поддържай 30-дневна поредица</string>
    <string name="achievement_first_perfect_description">Постигни перфектен резултат</string>
    <string name="achievement_five_perfects_description">Постигни 5 перфектни резултата</string>
    <string name="achievement_speed_demon_description">Завърши тест за под 90 секунди</string>
    <string name="achievement_no_hints_description">Постигни перфектен резултат без подсказки</string>
    <string name="achievement_level_5_description">Достигни ниво 5</string>
    <string name="achievement_level_10_description">Достигни ниво 10</string>
    <string name="achievement_level_25_description">Достигни ниво 25</string>
    <string name="achievement_xp_1000_description">Спечели 1 000 XP</string>
    <string name="achievement_xp_5000_description">Спечели 5 000 XP</string>

    <string name="score_display_format">%1$d / %2$d</string>
    <string name="timer_placeholder">00:45</string>
    <string name="daily_challenge_placeholder">⚡ Дневно предизвикателство</string>
    <string name="menu_more">Още</string>
    <string name="score_display_placeholder">0 / 1</string>
</resources>
